# CoordGeomPy

./: .readthedocs.yml  CHANGELOG.md  CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat  requirements.txt
src/CoordGeomPy/: CoordGeomPy.py  __init__.py
src/coordgeompy/: __init__.py  coordgeompy.py
tests/: test_CoordGeomPy.py  test_coordgeompy.py
